# SantaGame

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  Źródło.cpp
